Fix CSS MIME type headers for Netlify deployment

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,7 +23,17 @@
     Content-Type = "text/html; charset=utf-8"
 
 [[headers]]
-  for = "/assets/*"
+  for = "/assets/*.css"
+  [headers.values]
+    Content-Type = "text/css; charset=utf-8"
+
+[[headers]]
+  for = "/assets/*.js"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "/assets/*.mjs"
   [headers.values]
     Content-Type = "application/javascript; charset=utf-8"
 
@@ -31,4 +41,5 @@
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
 
