--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "client": "vite",
+    "server": "node server/index.js --dev",
+    "dev": "concurrently \"npm:server\" \"npm:client\"",
     "build": "vite build",
+    "start": "node server/index.js --serve-static",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "concurrently": "^9.2.1",
+    "express": "^5.1.0",
     "lottie-react": "^2.4.1",
+    "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.5"
